# MSEnforcerCommon

./: buildDev  buildRelease  targets
prod/: .gitignore
prod/AzureWeb/AzureBackend/: .env  README.docx  app.js  config.js  package-lock.json  package.json
prod/AzureWeb/AzureFrontend/: .eslintrc  GUIDE.docx  README.docx  package-lock.json  package.json
prod/QueryCloudAZ/NLEncipher/: CLAnalysis.cs  CommonHelper.cs  EncryptHelper.cs  MyLog.cs  NLEncipher.csproj  Program.cs
prod/QueryCloudAZ/QueryCloudAZSDK/: AssemblyInfo.cs  CELog.cs  CEQuery.cs  CommonHelper.cs  DataAccess.cs  EncryptHelper.cs  JPCConfig - CloudAZ.xml  JPCConfig - TestLocal.xml  JPCConfig.cs  JsonSerializer.cs  Makefile.inc  QueryCloudAZSDK.csproj  QueryCloudAZSDK.snk  XMLTools.cs
prod/QueryCloudAZ/QueryCloudAZSDKTester/: Program.cs  QueryCloudAZSDKTester.csproj
prod/QueryCloudAZSDK_C++/QueryCloudAZSDKCpp/: CMakeLists.txt
prod/QueryCloudAZSDK_C++/QueryCloudAZSDKCpp/include/: CommonFun.h  Connection.h  IQueryCloudAZ.h  QueryCloudAZExport.h  QueryCloudAZManager.h
prod/QueryCloudAZSDK_C++/QueryCloudAZSDKCpp/src/: CommonFun.cpp  Connection.cpp  NXLHttpClient.cpp  QueryCloudAZManager.cpp
prod/QueryCloudAzJS/: package-lock.json  package.json  tsconfig.json  webpack.config.js
prod/SDKWrapper/: Makefile.inc  SDKWrapper.vcproj  SDKWrapper.vcxproj  sdkwrapper.snk
prod/SkyDrmRestHelp/: ClassificationData.cs  ClassificationProfile.cs  LoginData.cs  Makefile.inc  RemoteViewData.cs  RemoteViewer.cs  RmsLogin.cs  SkyDrmRestHelp.csproj  SkyDrmRestHelp.snk  SkyDrmRestMgr.cs  function.cs
(+422 files in other folders)
